# brokkr

./: .editorconfig  .gitignore  CHANGELOG.md  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  README.md  clippy.toml  deny.toml  justfile  rustfmt.toml
.github/workflows/: ci.yml
crates/brokkr-cas/: Cargo.toml
crates/brokkr-cas/src/: action_cache.rs  error.rs  in_memory.rs  lib.rs  memory.rs  redb_backend.rs  traits.rs
crates/brokkr-cli/: Cargo.toml  build.rs
crates/brokkr-cli/src/: main.rs
crates/brokkr-cli/src/commands/: mod.rs  run.rs
crates/brokkr-common/: Cargo.toml
crates/brokkr-common/src/: digest.rs  digest_mod.rs  error.rs  id.rs  ids.rs  lib.rs
crates/brokkr-control/: Cargo.toml
crates/brokkr-control/src/: lib.rs  main.rs  scheduler.rs  services.rs  worker_service.rs
crates/brokkr-control/src/services/: action_cache.rs  capabilities.rs  cas.rs  execution.rs  mod.rs
crates/brokkr-control/tests/: end_to_end.rs  grpc_smoke.rs  phase1_dod.rs
crates/brokkr-control/tests/common/: mod.rs
crates/brokkr-proto/: Cargo.toml  build.rs
crates/brokkr-proto/protos/: VENDOR.md
crates/brokkr-proto/protos/brokkr/v1/: worker.proto
crates/brokkr-proto/src/: lib.rs
crates/brokkr-sandbox/: Cargo.toml
crates/brokkr-sandbox/src/: config.rs  error.rs  host_check.rs  lib.rs  outcome.rs
crates/brokkr-sandbox/src/checks/: mod.rs  outcome.rs  run.rs  status.rs
crates/brokkr-sandbox/src/checks/linux/: brokkr_slice.rs  cgroup2.rs  kernel_version.rs  memory_peak.rs  mod.rs  seccomp.rs  setgroups.rs  subtree_controllers.rs  user_namespaces.rs
crates/brokkr-sandbox/src/host/: cgroup.rs  ipc.rs  linux.rs  mod.rs
crates/brokkr-sandbox/src/runner/: exec.rs  mod.rs  mount.rs  netns.rs  pidns.rs  userns.rs
crates/brokkr-sandbox/tests/: cgroup.rs  mount_ns.rs  net_ns.rs  pid_ns.rs  sandbox_smoke.rs
crates/brokkr-sdk/: Cargo.toml
crates/brokkr-sdk/src/: client.rs  lib.rs
crates/brokkr-test-utils/: Cargo.toml
crates/brokkr-test-utils/src/: lib.rs
crates/brokkr-worker/: Cargo.toml
crates/brokkr-worker/src/: lib.rs  main.rs  runner.rs  worker.rs
docs/: phase-2-plan.md  plan.md
docs/architecture/: 0001-language-rust-everywhere.md  0002-reapi-compatibility.md  0003-embedded-kv-redb.md  0004-tracing-from-day-one.md  0005-no-docker-for-sandbox.md  0006-license-apache-2-0.md  0007-cas-gc-strategy.md
docs/journal/: phase-0.md  phase-2.md
scripts/: install-cgroup-slice.sh
