[package]
name = "brokkr-control"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
description = "Brokkr control plane: API gateway, action cache, scheduler, metadata store."

[lints]
workspace = true

[[bin]]
name = "brokkr-control"
path = "src/main.rs"

[dependencies]
brokkr-common.workspace = true
brokkr-proto.workspace = true
anyhow.workspace = true
clap.workspace = true
redb.workspace = true
thiserror.workspace = true
tokio.workspace = true
tonic.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
