[package]
name = "brokkr-control"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
description = "Brokkr control plane: API gateway, action cache, scheduler, metadata store."

[lints]
workspace = true

[[bin]]
name = "brokkr-control"
path = "src/main.rs"

[dependencies]
brokkr-common.workspace = true
brokkr-proto.workspace = true
brokkr-cas.workspace = true
anyhow.workspace = true
async-trait.workspace = true
bytes.workspace = true
clap.workspace = true
prost.workspace = true
prost-types.workspace = true
redb.workspace = true
thiserror.workspace = true
uuid.workspace = true
tokio.workspace = true
tokio-stream.workspace = true
tonic.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true

[dev-dependencies]
brokkr-sdk.workspace = true
brokkr-worker.workspace = true
tempfile.workspace = true
