[package]
name = "brokkr-proto"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
description = "Protobuf definitions and generated gRPC clients/servers for Brokkr (REAPI v2 + brokkr.v1)."

[lints]
workspace = true

[dependencies]
tonic.workspace = true
prost.workspace = true
prost-types.workspace = true

[build-dependencies]
tonic-build.workspace = true
