[package]
name = "brokkr-sandbox"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
description = "Linux-primitive sandbox runtime for Brokkr (namespaces, cgroups, seccomp). No Docker."

[lints]
workspace = true

[[bin]]
name = "brokkr-sandboxd"
path = "src/bin/sandboxd.rs"

[dependencies]
brokkr-common.workspace = true
bytes.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
tokio.workspace = true
tracing.workspace = true

[target.'cfg(target_os = "linux")'.dependencies]
nix.workspace = true

[dev-dependencies]
tempfile.workspace = true

[target.'cfg(target_os = "linux")'.dev-dependencies]
libc = "0.2"
