[package]
name = "brokkr-test-utils"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
description = "Internal test helpers and fixtures for the Brokkr workspace. Not published."
publish = false

[lints]
workspace = true

[dependencies]
brokkr-common.workspace = true
tokio.workspace = true
